[PROGRAMMES-6438] Fix collapsing padding (PR#596)

--- a/src/Ds2013/Presenters/Section/Episode/Map/_episode-map.scss
+++ b/src/Ds2013/Presenters/Section/Episode/Map/_episode-map.scss
@@ -23,7 +23,6 @@
     padding-bottom: 0;
 }
 
-
 @include mq-range('bpw2') {
     .map--episode .map__column .map__inner {
         margin-bottom: -50em;
@@ -52,6 +51,11 @@
         .map__column {
             margin-top: $basic-spacing;
         }
+    }
+
+    .map__column--last > .map__inner > .map__column {
+        margin-bottom: -50em;
+        padding-bottom: 50em;
     }
 }
 
